# A-Maze-Ing

A-Maze-Ing/: a_maze_ing.py  config.txt  mazegen.py  parser.py  save_maze.py  visual_display.py
A-Maze-Ing/algorithm/: bfs.py  dfs.py
FINAL AMAZING/: Makefile  README.md  README_MAZEGEN.md  a_maze_ing.py  bfs.py  config.txt  mazegen.py  output.txt  parser.py  pyproject.toml  save_maze.py  visual_display.py
mazegen/: a_maze_ing.py  bfs.py  mazegen.py  output.txt  save_maze.py  visual_display.py
output/A-Maze-Ing/: a_maze_ing.py  config.txt  mazegen.py  output_file.txt  save_maze.py
teste/A-Maze-Ing/: a_maze_ing.py  config.txt  mazegen.py  visual_display.py
teste/A-Maze-Ing/algorithm/: bfs.py  dfs.py
